[package]
name = "wrg-snake"
version = "0.1.0"
authors = ["Darren Tsung <darren.tsung@gmail.com>"]

[workspace]
members = [
    "wrg-2d",
]

[lib]
crate-type = ["cdylib"]

[dependencies]
wbg-rand = "0.4"
wasm-bindgen = "0.2"
wasm-rgame = { path = "../wasm-rgame" }
wasm-rgame-ui = { path = "../wasm-rgame-ui" }
wrg-2d = { path = "./wrg-2d" }
circular-queue = "0.2"

[profile.release]
# Include function names in the `.wasm` for better debugging and
# profiling. Comment this out if you're trying to create the smallest `.wasm`
# binaries you can.
debug = true

# # Uncomment these lines to create smaller `.wasm` binaries, at the cost of
# # longer compile times.
# codegen-units = 1
# incremental = false
# lto = true
# opt-level = "z"
